--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
 {% seo %}
-
+    <title>Jason Xu</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -17,22 +17,22 @@
       <header>
         <a href="{{ site.github.url }}"> <h1>{{ Jason Xu | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <img src="https://jasonxu90.github.io/files/me.jpg">
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        {% if site.show_downloads %}
+
+        <p>NSF Postdoc  <br> UCLA <br> Department of Biomathematics <br> <br> jqxu@ucla.edu <br></p>
+        
           <ul>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+            <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
+            <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
+            <li><a href="https://jasonxu90.github.io/teaching.html">Teaching</a></li>
           </ul>
-        {% endif %}
+
       </header>
       <section>
 
