--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="{{ site.github.url }}"> <h1>{{ Jason Xu | default: site.github.repository_name }}</h1> </a>
+        <a href="{{ Jason Xu }}"> <h1>{{ Home | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
         <img src="https://jasonxu90.github.io/files/me.jpg">
 
 
