--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 
 {% seo %}
     <title>Jason Xu</title>
+
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -26,17 +27,16 @@
         {% endif %}
 
 
-        <p>NSF Postdoc  <br> UCLA <br> Department of Biomathematics <br> <br> jqxu@ucla.edu <br></p>
-        
-          <ul>
-            <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
-            <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
-            <li><a href="https://jasonxu90.github.io/teaching.html">Teaching</a></li>
-          </ul>
+        <p>NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
       </header>
       <section>
-
+          <ul>
+            <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
+            <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
+            <li><a href="https://jasonxu90.github.io/teaching.html">Publications</a></li>
+            <li><a href="https://jasonxu90.github.io/teaching.html">Teaching</a></li>
+          </ul>
       {{ content }}
 
       </section>
