--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <p>NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
       </header>
-      <section>
+      <header>
           <ul>
             <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
             <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
@@ -39,7 +39,7 @@
           </ul>
       {{ content }}
 
-      </section>
+      </header>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
@@ -63,3 +63,6 @@
   {% endif %}
   </body>
 </html>
+
+
+
