--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,12 @@
         {% endif %}
 
 
-        <p>NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
+        <p> NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
           <ul>
             <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
             <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
-            <li><a href="https://jasonxu90.github.io/teaching.html">Publications</a></li>
+            <li><a href="https://jasonxu90.github.io/publications.html">Publications</a></li>
             <li><a href="https://jasonxu90.github.io/teaching.html">Teaching</a></li>
           </ul>
       </header>
