--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 {% seo %}
     <title>Jason Xu</title>
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ 'Jason Xu' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,7 +17,6 @@
     <div class="wrapper">
       <header>
         <a href="{{ Jason Xu }}"> <h1>{{ Home | default: site.github.repository_name }}</h1> </a>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         <img src="https://jasonxu90.github.io/files/me.jpg">
 
@@ -26,15 +25,14 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        <ul>
+          <li><a href="https://jasonxu90.github.io/index.html"> <strong>Home</strong></a></li>
+          <li><a href="https://jasonxu90.github.io/research.html"><strong>Research</strong></a></li>
+          <li><a href="https://jasonxu90.github.io/teaching.html"><strong>Teaching</strong></a></li>
+        </ul>
 
         <p> NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
-        <ul>
-          <li><a href="https://jasonxu90.github.io/index.html">Home</a></li>
-          <li><a href="https://jasonxu90.github.io/research.html">Research</a></li>
-          <li><a href="https://jasonxu90.github.io/publications.html">Publications</a></li>
-          <li><a href="https://jasonxu90.github.io/teaching.html">Teaching</a></li>
-        </ul>
       </header>
       
       <section>
