--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
 {% seo %}
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta name="viewport" content="width=device-width">
+
     <title>Jason Xu</title>
 
-    <link rel="stylesheet" href="{{ 'Jason Xu' | append: site.github.build_revision | relative_url }}">
-    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
