--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="{{ Jason Xu }}"> <h1>{{ Home | default: site.github.repository_name }}</h1> </a>
+        <a href="https://jasonxu90.github.io/index.html"><h1>Jason Xu</h1></a>
         
         <img src="https://jasonxu90.github.io/files/me.jpg">
 
@@ -27,7 +27,7 @@
         {% endif %}
 
         <ul>
-          <li><a href="https://jasonxu90.github.io/index.html"> <strong>Home</strong></a></li>
+          <li><a href="https://jasonxu90.github.io/index.html"><strong>Home</strong></a></li>
           <li><a href="https://jasonxu90.github.io/research.html"><strong>Research</strong></a></li>
           <li><a href="https://jasonxu90.github.io/teaching.html"><strong>Teaching</strong></a></li>
         </ul>
