--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
         {% endif %}
 
         <ul>
-          <li><a href="https://jasonxu90.github.io/index.html"><strong>Home</strong></a></li>
           <li><a href="https://jasonxu90.github.io/research.html"><strong>Research</strong></a></li>
           <li><a href="https://jasonxu90.github.io/teaching.html"><strong>Teaching</strong></a></li>
+          <li><a href="https://jasonxu90.github.io/publications.html"><strong>Publications</strong></a></li>
+
         </ul>
 
         <p> NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
