--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <p> NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
         {% if site.github.is_user_page %}
-          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+          <p class="view"><small><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></small></p>
         {% endif %}
 
       </header>
