--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,8 @@
 
         <p> NSF Postdoctoral Research Fellow  <br> University of California, Los Angeles <br> Department of Biomathematics <br> <br> Email:  jqxu at ucla dot edu <br></p>
 
-        {% if site.github.is_user_page %}
-          <p class="view"><small><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></small></p>
-        {% endif %}
+        <p class="view"><small><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></small></p>
+        <p><small>&copy; 2017 Jason Xu &middot; All rights reserved &middot;</small></p>
 
       </header>
       
