--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           <li><a href="https://jasonxu90.github.io/publications.html"><strong>Publications</strong></a></li>
         </ul>
 
-        <p> Assistant Professor of Statistical Science  <br> Duke University  <br>  <br> Email:  jason.q.xu at duke dot edu <br></p>
+        <p> Assistant Professor of Statistical Science  <br> Duke University  <br>   Email:  jason.q.xu at duke dot edu <br></p>
 
         <p class="view"><small><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></small></p>
         <p><small>&copy; 2018 Jason Xu &middot; All rights reserved &middot;</small></p>
