--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
           <li><a href="https://jasonxu90.github.io/publications.html"><strong>Publications</strong></a></li>
         </ul>
 
-        <p> Assistant Professor of Statistical Science  <br> Duke University  <br>   Email:  jason.q.xu at duke dot edu <br></p>
+        <p> Associate Professor of Biostatistics  <br> University of California, Los Angeles  <br>   Email:  jqxu at g dot ucla dot edu <br></p>
 
         <p class="view"><small><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></small></p>
-        <p><small>&copy; 2024 Jason Xu &middot; All rights reserved &middot;</small></p>
+        <p><small>&copy; 2025 Jason Xu &middot; All rights reserved &middot;</small></p>
 
       </header>
       
